add long press in list of record

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.arc.android_timer.SQLiteDemoActivity" android:screenOrientation="portrait"></activity>
     </application>
     
 </manifest>
